j--/tests/pass/AndAssign.java
package pass;

public class AndAssign {
	public int eval(int a, int b) {
		a &= b;
		return a;
	}
}
