j--/tests/fail/AndAssign.java
package fail;

public class AndAssign {

	public static void main(String args[]) {
		System.out.println("c" &= "b");
	}

}
